--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2021"
 axum = "0.7.7"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.131"
+sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres"] }
 tokio = { version = "1.40.0", features = ["full"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing-tree = "0.4.0"
