--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.7"
+dotenvy = "0.15.7"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.131"
 sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres"] }
